--- a/package.json
+++ b/package.json
@@ -1,45 +1,37 @@
 {
-  "name": "sapper-feathers-template",
-  "description": "A starter template for a sapper based feathers client",
-  "version": "0.0.1",
+  "name": "scorekeeper-viewer-sapper",
+  "description": "A sapper based scoreboard viewer app",
+  "version": "0.1.0",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build",
     "export": "sapper export",
-    "start": "node build",
+    "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
-    "@feathersjs/authentication-client": "^1.0.4",
-    "@feathersjs/feathers": "^3.2.1",
-    "@feathersjs/socketio-client": "^1.1.2",
+    "@feathersjs/authentication-client": "^1.0.10",
+    "@feathersjs/feathers": "^3.3.1",
+    "@feathersjs/socketio-client": "^1.2.1",
     "compression": "^1.7.3",
     "cookie-storage": "^3.2.0",
-    "date-fns": "^2.0.0-alpha.16",
+    "date-fns": "^2.0.0-alpha.27",
     "feathers-reactive": "^0.7.2",
     "number-to-words": "^1.2.4",
     "polka": "^0.4.0",
-    "sapper": "^0.18.7",
-    "sirv": "^0.2.1",
-    "socket.io-client": "^2.1.1",
-    "svelte-transitions": "^1.2.0",
-    "typeface-roboto-slab": "0.0.54"
+    "sirv": "^0.2.2",
+    "socket.io-client": "^2.2.0",
+    "svelte-transitions": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^5.5.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "npm-run-all": "^4.1.3",
-    "postcss": "^7.0.2",
-    "postcss-import": "^12.0.0",
-    "svelte": "^2.13.2",
-    "svelte-loader": "^2.11.0",
-    "svelte-preprocess-postcss": "^1.0.0",
-    "webpack": "^4.17.1"
+    "@tivac/eslint-plugin-svelte": "^1.2.1",
+    "eslint-plugin-html": "^5.0.0",
+    "npm-run-all": "^4.1.5",
+    "sapper": "^0.22.1",
+    "svelte": "^2.0.0",
+    "svelte-loader": "^2.9.0",
+    "webpack": "^4.7.0"
   }
 }
